Fix code review feedback and improve tests quality